# Art-Studio-AI-Image-Generation-Platform

./: .gitignore  README.md  auth.py  config.py  env.examples  main.py  models.py  pyproject.toml  routes.py  thumbnail_builder.db
app/api/: auth.py
app/core/: config.py
app/db/: db_config.py  session.py
app/models/: __init__.py  tables.py
app/schemas/: auth.py
app/services/: security.py
frontend/: .env.example  README.md  index.html  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css  routes.js
frontend/src/components/ui/: Button.jsx  Card.jsx  Input.jsx  Separator.jsx
frontend/src/pages/: AuthPage.jsx  ThumbnailStudioPage.jsx  auth-page.css
scripts/: dev.sh
services/: generator.py  imagekit_service.py  openai_service.py
socket-io/: socket_auth_middleware.py
