[project]
name = "project-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.1.3",
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "imagekitio>=5.4.0",
    "openai==1.78.1",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "sqlmodel==0.0.24",
    "uvicorn==0.34.2",
]
